--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
         }
       }
     </script>
-    <script src="http://api.flickr.com/services/rest/?method=flickr.photos.search&api_key=b053ac65a327f3d44ea6df29ce61bb2c&user_id=100343288@N03&per_page=500&extras=url_o&format=json"></script>
+    <script src="https://api.flickr.com/services/rest/?method=flickr.photos.search&api_key=b053ac65a327f3d44ea6df29ce61bb2c&user_id=100343288@N03&per_page=500&extras=url_o&format=json"></script>
   </body>
 </html>
